@@ -35,7 +35,7 @@ plugins {
 }
 
 group = "de.tum.in.www1.artemis"
-version = "4.4.6"
+version = "4.5.0"
 description = "Interactive Learning with Individual Feedback"
 
 sourceCompatibility=15
@@ -80,7 +80,7 @@ spotless {
         importOrderFile "artemis-spotless.importorder"
         eclipse().configFile "artemis-spotless-style.xml"
 
-        // the following command is not compatible with Java14 switch expressions
+        // the following command is not compatible with Java switch expressions
 //        removeUnusedImports()
     }
 }
@@ -91,14 +91,9 @@ springBoot {
     mainClassName = "de.tum.in.www1.artemis.ArtemisApp"
 }
 
-tasks.withType(JavaCompile).each {
-    it.options.compilerArgs.add('--enable-preview')
-}
-
 // Execute the test cases: ./gradlew executeTests
 
 test {
-    jvmArgs(['--enable-preview'])
     useJUnitPlatform()
     exclude "**/*IT*", "**/*IntTest*", "**/*CucumberIT*"
     testLogging.showStandardStreams = true
@@ -110,7 +105,6 @@ test {
 }
 
 task integrationTest(type: Test) {
-    jvmArgs(['--enable-preview'])
     description = "Execute integration tests."
     group = "verification"
     include "**/*IT*", "**/*IntTest*"
@@ -134,6 +128,10 @@ task testReport(type: TestReport) {
 task integrationTestReport(type: TestReport) {
     destinationDir = file("$buildDir/reports/tests")
     reportOn integrationTest
+}
+
+jacoco {
+    toolVersion = "0.8.6"
 }
 
 jacocoTestReport {
@@ -340,7 +338,7 @@ tasks.withType(Test) {
 }
 
 wrapper {
-    gradleVersion = "6.7-rc-1"
+    gradleVersion = "6.6.1"
 }
 
 task stage(dependsOn: "bootWar") {
